--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,17 @@ services:
       - postgres
       - redis
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80" # Replace 8080 with the desired port for your application
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf # Mount your Nginx configuration file
+    depends_on:
+      - api # Nginx depends on the API service being available
+
+
 volumes:
   postgres_data:
     driver: local
